--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,6 +15,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - run: npm ci
+    - run: npm install
     - run: npm run build --if-present
     - run: npm test
