--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - run: npm install
-    - run: npm run build --if-present
-    - run: npm test
+    - run: nvm use v16.18.0
+    - run: npm ci
