--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    timeout-minutes: 120
+    
     steps:
     - uses: actions/checkout@v3
     - run: npm ci
