--- a/angular.json
+++ b/angular.json
@@ -68,6 +68,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+	   "options":{
+		"host":"0.0.0.0",
+		"port":8080
+		},
           "configurations": {
             "production": {
               "browserTarget": "telemedicine-app:build:production"
@@ -87,5 +91,8 @@
        
       }
     }
+  },
+  "cli": {
+    "analytics": "dc68e270-d225-428c-b840-4a54469c6cf0"
   }
 }
