--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
-	   
+			   "options":{
+		"host":"0.0.0.0",
+		"port":8080
+		},
           "configurations": {
             "production": {
               "browserTarget": "telemedicine-app:build:production"
@@ -84,12 +87,30 @@
           "options": {
             "browserTarget": "telemedicine-app:build"
           }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "src/test.ts",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.scss"
+            ],
+            "scripts": []
+          }
         }
-       
       }
     }
   },
   "cli": {
-    "analytics": "dc68e270-d225-428c-b840-4a54469c6cf0"
+    "analytics": "16dc0e58-345f-4dc3-adde-e55c3fff5b09"
   }
 }
