--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -26,7 +24,8 @@
     "@ngrx/store": "^14.3.1",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "ngx-translate-multi-http-loader": "^8.0.2",
+    "@types/jest": "^29.0.3",
+    "jest": "^29.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -35,18 +34,13 @@
     "@angular-devkit/build-angular": "^14.2.3",
     "@angular/cli": "~14.2.3",
     "@angular/compiler-cli": "^14.2.0",
-    "@types/jest": "^29.1.2",
-    "jest": "^29.1.2",
-    "jest-preset-angular": "^12.2.2",
+    "@types/jasmine": "~4.0.0",
+    "jasmine-core": "~4.3.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.7.2"
-  },
-  "jest": {
-    "preset": "jest-preset-angular",
-    "roots": [
-      "<rootDir>/src/"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setup.jest.ts"
-    ]
   }
 }
