--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,12 +4,11 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jest",
-      "node"
+      "jasmine"
     ]
   },
   "files": [
-    "src/setup.jest.ts",
+    "src/test.ts",
     "src/polyfills.ts"
   ],
   "include": [
