--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node --max_old_space_size=5096 node_modules/@angular/cli/bin/ng serve --host 137.184.124.68 --port 8080 --disable-host-check",
-    "build": "ng build",
+    "build": "ng build --prod && mv dist/telemedicine-app _static",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
