--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node --max_old_space_size=5096 node_modules/@angular/cli/bin/ng serve --host 137.184.124.68 --port 8080",
-    "build": "ng build && mv dist/telemedicine-app _static",
+    "start": "node --max_old_space_size=5096 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 --port 8080",
+    "build": "ng build --prod && mv dist/telemedicine-app _static",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
