--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node --max_old_space_size=5096 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 --port 8080",
+    "start": "node --max_old_space_size=5096 node_modules/@angular/cli/bin/ng serve --port 8080",
     "build": "ng build --configuration production && mv dist/telemedicine-app _static",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
