--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node --max_old_space_size=5096 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 --port 8080 --disable-host-check",
-    "build": "ng build --configuration production && mv dist/telemedicine-app _static",
+    "start": "ng serve",
+    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint": "ng lint",
+    "serve": "ng serve"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +28,7 @@
     "@ngrx/store": "^14.3.1",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "lodash": "^4.17.21",
     "ngx-translate-multi-http-loader": "^8.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -33,9 +36,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.3",
+    "@angular-eslint/builder": "14.1.2",
+    "@angular-eslint/eslint-plugin": "14.1.2",
+    "@angular-eslint/eslint-plugin-template": "14.1.2",
+    "@angular-eslint/schematics": "14.1.2",
+    "@angular-eslint/template-parser": "14.1.2",
     "@angular/cli": "~14.2.3",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jest": "^29.1.2",
+    "@types/lodash": "^4.14.186",
+    "@typescript-eslint/eslint-plugin": "5.37.0",
+    "@typescript-eslint/parser": "5.37.0",
+    "eslint": "^8.23.1",
     "jest": "^29.1.2",
     "jest-preset-angular": "^12.2.2",
     "typescript": "~4.7.2"
