--- a/package.json
+++ b/package.json
@@ -3,14 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "lint": "ng lint",
-    "serve": "ng serve"
+    "start": "ng serve --host 0.0.0.0 --port 8080 --disable-host-check",
+    "build": "ng build --configuration production",
+    "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "dependencies": {
