--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": { "postinstall": "ng build --aot -prod"}
           },
           "configurations": {
             "production": {
