--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 8080 --disable-host-check",
     "build": "ng build --configuration production",
-    "watch": "ng build --watch --configuration development"
+    "watch": "ng build --watch --configuration development",
+"heroku-postbuild": "cd ANGULAR_APP_FOLDER && npm install"
   },
   "private": true,
   "dependencies": {
